<?xml version='1.0' encoding='UTF-8'?>
<package format="2">
    <name>forssea_msgs</name>
    <version>3.9.0</version>
    <description>The forssea_msgs package</description>

    <maintainer email="alaa@forssea-robotics.fr">Alaa El Jawad</maintainer>

    <license>TODO</license>

    <author email="alaa@forssea-robotics.fr">Alaa El Jawad</author>
    <author email="auguste@forssea-robotics.fr">Auguste Bourgois</author>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <depend>std_msgs</depend>
    <depend>actionlib_msgs</depend>
    <depend>geometry_msgs</depend>
    <depend>geographic_msgs</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>roscpp</depend>
    <exec_depend>message_runtime</exec_depend>
    <exec_depend>python-numpy</exec_depend>
    <exec_depend>python-transforms3d-pip</exec_depend>
    <exec_depend>rospy</exec_depend>

    <test_depend>gtest</test_depend>

    <export/>
</package>
